<resources>
    <string name="app_name">Lalu Lelang</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_acount">Create acount</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="bid">Bid</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
</resources>